kustomize/overlays/production/servicemesh/virtual-service/bots-vs.yml
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: ittool-route
  namespace: bots
spec:
  hosts:
  - ittool.homelab.ezequielvalencia.com
  gateways:
  - istio-system/homelab-gateway 
  http:
  - route:
    - destination:
        host: ittool.bots.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: openproject-route
  namespace: bots
spec:
  hosts:
  - openproject.homelab.ezequielvalencia.com
  gateways:
  - istio-system/homelab-gateway 
  http:
  - route:
    - destination:
        host: openproject.bots.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: karakeep-route
  namespace: bots
spec:
  hosts:
  - karakeep.homelab.ezequielvalencia.com
  gateways:
  - istio-system/homelab-gateway 
  http:
  - route:
    - destination:
        host: karakeep.bots.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: leantime-route
  namespace: bots
spec:
  hosts:
  - leantime.homelab.ezequielvalencia.com
  gateways:
  - istio-system/homelab-gateway 
  http:
  - route:
    - destination:
        host: leantime.bots.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: gitea-route
  namespace: bots
spec:
  hosts:
  - gitea.homelab.ezequielvalencia.com
  gateways:
  - istio-system/homelab-gateway 
  http:
  - match:
      - uri:
          prefix: /
    route:
    - destination:
        host: gitea.bots.svc.cluster.local
        port:
          number: 80
  tcp:
  - match:
      - port: 2222
        # sniHosts:
        #   - gitea.homelab.ezequielvalencia.com
    route:
    - destination:
        host: gitea.bots.svc.cluster.local
        port:
          number: 2222
